--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "symfony/dependency-injection": "^3.3 || ^4",
         "symfony/http-kernel": "^3.3 || ^4",
         "symfony/polyfill-mbstring": "^1",
-        "twig/twig": "^2.4.4 || ^3"
+        "twig/twig": "^2.4.4"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.3",
