--- a/composer.json
+++ b/composer.json
@@ -39,5 +39,10 @@
     ],
     "config": {
         "sort-packages": true
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "2.x-dev"
+        }
     }
 }
