--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ matrix:
       env: DEPENDENCIES=dev
 
 before_install:
-  - if [ "$DEPENDENCIES" = "dev" ]; then composer config minimum-stability dev; fi;
+  - if [ "$DEPENDENCIES" = "dev" ]; then composer config minimum-stability dev; composer remove --dev friendsofphp/php-cs-fixer; fi;
 
 install:
   - if [ "$DEPENDENCIES" = "low" ]; then composer update --prefer-lowest; else composer install; fi;
