--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -1,5 +1,7 @@
 <?php
 
+declare(strict_types=1);
+
 use PhpCsFixer\Config;
 use PhpCsFixer\Finder;
 
@@ -17,7 +19,16 @@ return Config::create()
     ->setCacheFile(__DIR__.'/.php_cs.cache')
     ->setRules([
         '@Symfony' => true,
+        '@Symfony:risky' => true,
+        '@PHP71Migration' => true,
+        '@PHP71Migration:risky' => true,
+
         'array_syntax' => ['syntax' => 'short'],
         'ordered_imports' => ['imports_order' => ['class', 'const', 'function']],
+        'method_chaining_indentation' => true,
+        'multiline_whitespace_before_semicolons' => ['strategy' => 'new_line_for_chained_calls'],
+        'phpdoc_order' => true,
+        'visibility_required' => ['elements' => ['property', 'method', 'const']],
     ])
+    ->setRiskyAllowed(true)
 ;
