--- a/.travis.yml
+++ b/.travis.yml
@@ -2,18 +2,18 @@ dist: xenial
 language: php
 
 php:
-  - 7.1
-  - 7.2
+  - '7.1'
+  - '7.2'
 
-env:
+env: []
 
 matrix:
   include:
-    - php: 7.1.3
+    - php: '7.1.3'
       env: DEPENDENCIES=low
-    - php: 7.3
+    - php: '7.3'
       env: CHECK_CS=1
-    - php: nightly
+    - php: '7.4snapshot'
       env: DEPENDENCIES=dev
 
   allow_failures:
