--- a/composer.json
+++ b/composer.json
@@ -15,17 +15,17 @@
         "ext-xmlwriter": "*",
         "fortawesome/font-awesome": "^4.7",
         "psr/log": "^1",
-        "symfony/dependency-injection": "^3.3 || ^4",
-        "symfony/http-kernel": "^3.3 || ^4",
+        "symfony/dependency-injection": "^3.3 || ^4 || ^5",
+        "symfony/http-kernel": "^3.3 || ^4 || ^5",
         "symfony/polyfill-mbstring": "^1",
-        "twig/twig": "^2.4.4"
+        "twig/twig": "^2.4.4 || ^3"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.14",
         "phpunit/phpunit": "^7 || ^8",
-        "symfony/filesystem": "^3.3 || ^4",
-        "symfony/framework-bundle": "^3.3 || ^4",
-        "symfony/twig-bundle": "^3.4 || ^4"
+        "symfony/filesystem": "^3.3 || ^4 || ^5",
+        "symfony/framework-bundle": "^3.3 || ^4 | ^5",
+        "symfony/twig-bundle": "^3.4 || ^4 | ^5"
     },
     "config": {
         "sort-packages": true
