--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ matrix:
       env: DEPENDENCIES=low
     - php: '7.3'
       env: CHECK_CS=1
-    - php: '7.4snapshot'
+    - php: '7.4'
       env: DEPENDENCIES=dev
 
   allow_failures:
