--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.14",
-        "phpunit/phpunit": "^7 || ^8",
+        "phpunit/phpunit": "^7 || ^8 || ^9",
         "symfony/filesystem": "^3.3 || ^4 || ^5",
         "symfony/framework-bundle": "^3.3 || ^4 | ^5",
         "symfony/twig-bundle": "^3.4 || ^4 | ^5"
