--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-dist: xenial
+dist: bionic
 language: php
 
 php:
@@ -10,7 +10,8 @@ env: []
 
 matrix:
   include:
-    - php: '7.1.3'
+    - dist: xenial
+      php: '7.1.3'
       env: DEPENDENCIES=low
     - php: '7.4'
       env: CHECK_CS=1
