--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,8 @@ env: []
 
 matrix:
   include:
-    - php: '7.2.9'
+    - dist: xenial
+      php: '7.2.9'
       env: DEPENDENCIES=low
     - php: '7.4'
       env: CHECK_CS=1
