--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -17,4 +17,8 @@
             <directory>./tests/</directory>
         </testsuite>
     </testsuites>
+
+    <listeners>
+        <listener class="Symfony\Bridge\PhpUnit\SymfonyTestsListener" />
+    </listeners>
 </phpunit>
