Remove obsolete branch alias.

--- a/composer.json
+++ b/composer.json
@@ -24,17 +24,12 @@
         "friendsofphp/php-cs-fixer": "^2.14",
         "phpunit/phpunit": "^7 || ^8 || ^9",
         "symfony/filesystem": "^3.3 || ^4 || ^5",
-        "symfony/framework-bundle": "^3.3 || ^4 | ^5",
+        "symfony/framework-bundle": "^3.3 || ^4 || ^5",
         "symfony/phpunit-bridge": "^5.1",
-        "symfony/twig-bundle": "^3.4 || ^4 | ^5"
+        "symfony/twig-bundle": "^3.4 || ^4 || ^5"
     },
     "config": {
         "sort-packages": true
-    },
-    "extra": {
-        "branch-alias": {
-            "dev-master": "2.x-dev"
-        }
     },
     "autoload": {
         "psr-4": {
