--- a/composer.json
+++ b/composer.json
@@ -12,17 +12,17 @@
     "require": {
         "php": "^7.2.9 || ^8",
         "fortawesome/font-awesome": "^5.15",
-        "symfony/dependency-injection": "^4.3 || ^5",
-        "symfony/http-kernel": "^4.3 || ^5",
+        "symfony/dependency-injection": "^4.3 || ^5 || ^6",
+        "symfony/http-kernel": "^4.3 || ^5 || ^6",
         "twig/twig": "^2.4.4 || ^3"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.2",
         "phpunit/phpunit": "^8 || ^9",
-        "symfony/filesystem": "^4.3 || ^5",
-        "symfony/framework-bundle": "^4.3 || ^5",
-        "symfony/phpunit-bridge": "^5.1",
-        "symfony/twig-bundle": "^4.3 || ^5"
+        "symfony/filesystem": "^4.3 || ^5 || ^6",
+        "symfony/framework-bundle": "^4.3 || ^5 || ^6",
+        "symfony/phpunit-bridge": "^5.3",
+        "symfony/twig-bundle": "^4.3 || ^5 || ^6"
     },
     "config": {
         "sort-packages": true
