--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         }
     ],
     "require": {
-        "php": "^7.1 || ^8",
+        "php": ">=7.1",
         "ext-xmlreader": "*",
         "ext-xmlwriter": "*",
         "fortawesome/font-awesome": "^4.7",
@@ -21,11 +21,11 @@
         "twig/twig": "^2.4.4 || ^3"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^2.14",
-        "phpunit/phpunit": "^7 || ^8 || ^9",
-        "symfony/filesystem": "^3.3 || ^4 || ^5",
-        "symfony/framework-bundle": "^3.3 || ^4 || ^5",
-        "symfony/phpunit-bridge": "^5.1",
+        "friendsofphp/php-cs-fixer": "^3.2",
+        "phpunit/phpunit": "^7.5 || ^8.5 || ^9.5",
+        "symfony/filesystem": "^3.4 || ^4 || ^5",
+        "symfony/framework-bundle": "^3.4 || ^4 || ^5",
+        "symfony/phpunit-bridge": "^5.2",
         "symfony/twig-bundle": "^3.4 || ^4 || ^5"
     },
     "config": {
