--- a/composer.json
+++ b/composer.json
@@ -10,19 +10,19 @@
         }
     ],
     "require": {
-        "php": ">= 7.2.9",
-        "fortawesome/font-awesome": "^5.15",
-        "symfony/dependency-injection": "^4.3 || ^5 || ^6",
-        "symfony/http-kernel": "^4.3 || ^5 || ^6",
-        "twig/twig": "^2.4.4 || ^3"
+        "php": ">= 8.1",
+        "fortawesome/font-awesome": "^6.1",
+        "symfony/dependency-injection": "^6",
+        "symfony/http-kernel": "^6",
+        "twig/twig": "^3.3.3"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^3.2",
-        "phpunit/phpunit": "^8.5 || ^9.5",
-        "symfony/filesystem": "^4.3 || ^5 || ^6",
-        "symfony/framework-bundle": "^4.3 || ^5 || ^6",
-        "symfony/phpunit-bridge": "^5.3",
-        "symfony/twig-bundle": "^4.3 || ^5 || ^6"
+        "friendsofphp/php-cs-fixer": "^3.8",
+        "phpunit/phpunit": "^9.5.19",
+        "symfony/filesystem": "^6",
+        "symfony/framework-bundle": "^6",
+        "symfony/phpunit-bridge": "^6",
+        "symfony/twig-bundle": "^6"
     },
     "config": {
         "sort-packages": true
