--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     ],
     "require": {
         "php": ">= 8.1",
+        "composer-runtime-api": "^2.1",
         "fortawesome/font-awesome": "^6.1",
         "symfony/dependency-injection": "^6",
         "symfony/http-kernel": "^6",
