--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.8",
+        "phpstan/phpstan": "^1.5",
         "phpunit/phpunit": "^9.5.19",
         "symfony/filesystem": "^6",
         "symfony/framework-bundle": "^6",
