--- a/composer.json
+++ b/composer.json
@@ -13,17 +13,17 @@
         "php": ">= 8.1",
         "composer-runtime-api": "^2.1",
         "fortawesome/font-awesome": "^6.3",
-        "symfony/dependency-injection": "^6.2",
-        "symfony/http-kernel": "^6.2",
+        "symfony/dependency-injection": "^6.2 || ^7",
+        "symfony/http-kernel": "^6.2 || ^7",
         "twig/twig": "^3.5"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.15.1",
         "phpstan/phpstan": "^1.10.7",
         "phpunit/phpunit": "^10.0.16",
-        "symfony/filesystem": "^6.2",
-        "symfony/framework-bundle": "^6.2",
-        "symfony/twig-bundle": "^6.2"
+        "symfony/filesystem": "^6.2 || ^7",
+        "symfony/framework-bundle": "^6.2 || ^7",
+        "symfony/twig-bundle": "^6.2 || ^7"
     },
     "config": {
         "sort-packages": true
