--- a/composer.json
+++ b/composer.json
@@ -19,13 +19,18 @@
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.50",
+        "phpstan/extension-installer": "^1.3",
         "phpstan/phpstan": "^1.10.59",
-        "phpunit/phpunit": "^10.5.10",
+        "phpstan/phpstan-phpunit": "^1.3",
+        "phpunit/phpunit": "^10.5.10 || ^11.0.3",
         "symfony/filesystem": "^6.4 || ^7",
         "symfony/framework-bundle": "^6.4 || ^7",
         "symfony/twig-bundle": "^6.4 || ^7"
     },
     "config": {
+        "allow-plugins": {
+            "phpstan/extension-installer": true
+        },
         "sort-packages": true
     },
     "autoload": {
