--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,11 @@
         }
     ],
     "require": {
-        "php": ">= 8.1",
+        "php": ">= 8.2",
         "composer-runtime-api": "^2.1",
-        "fortawesome/font-awesome": "^6.3",
-        "symfony/dependency-injection": "^6.2 || ^7",
-        "symfony/http-kernel": "^6.2 || ^7",
+        "fortawesome/font-awesome": "^6.5.1",
+        "symfony/dependency-injection": "^6.4 || ^7",
+        "symfony/http-kernel": "^6.4 || ^7",
         "twig/twig": "^3.5"
     },
     "require-dev": {
@@ -22,7 +22,7 @@
         "phpstan/extension-installer": "^1.3",
         "phpstan/phpstan": "^1.10.59",
         "phpstan/phpstan-phpunit": "^1.3",
-        "phpunit/phpunit": "^10.5.10 || ^11.0.3",
+        "phpunit/phpunit": "^11.0.3",
         "symfony/filesystem": "^6.4 || ^7",
         "symfony/framework-bundle": "^6.4 || ^7",
         "symfony/twig-bundle": "^6.4 || ^7"
